# sqmeeting_linux

./: .gitignore  README.md
SQMeeting/: CMakeLists.txt  EULA.txt  FrtcMeeting.icns  FrtcMeeting_zh_CN.ts  Info.plist.in.plist  main.cpp  main.qml  qml.qrc
SQMeeting/SQMeetingComponent/Audio/AudioCapture/: AudioCapture.hpp  IAudioCapture.h
SQMeeting/SQMeetingComponent/Audio/AudioCapture/AudioCapture_UOS/: AudioUnitCapture.cpp  AudioUnitCapture.h
SQMeeting/SQMeetingComponent/Audio/AudioCapture/AudioCapture_Windows/: AudioUnitCapture_Windows.cpp  AudioUnitCapture_Windows.h
SQMeeting/SQMeetingComponent/Audio/AudioCapture/AudioCapture_macOS/: AudioUnitCapture.cpp  AudioUnitCapture.h
SQMeeting/SQMeetingComponent/Audio/AudioDevice/AudioDevice_UOS/: AudioDevice.cpp  AudioDevice.h  alsa.cpp  alsa.h
SQMeeting/SQMeetingComponent/Audio/AudioDevice/AudioDevice_Windows/: AudioDevice.cpp  AudioDevice.h
SQMeeting/SQMeetingComponent/Audio/AudioSink/: AudioSink.hpp  IAudioSink.h
SQMeeting/SQMeetingComponent/Audio/AudioSink/AudioSink_UOS/: AudioUnitSinkChan.cpp  AudioUnitSinkChan.h
SQMeeting/SQMeetingComponent/Audio/AudioSink/AudioSink_Windows/: AudioUnitSinkChan_Windows.cpp  AudioUnitSinkChan_Windows.h
SQMeeting/SQMeetingComponent/Audio/AudioSink/AudioSink_macOS/: AudioUnitSinkChan_macOS.cpp  AudioUnitSinkChan_macOS.h
SQMeeting/SQMeetingComponent/Content/: FContentCapture.cpp  FContentCapture.h
SQMeeting/SQMeetingComponent/DeviceContext/: SDKDeviceContext.cpp  SDKDeviceContext.h
SQMeeting/SQMeetingComponent/FMeetingView/Src/: FMeetingViewController.cpp  FMeetingViewController.h
SQMeeting/SQMeetingComponent/FMeetingView/View/qml/: FMeetingVideoView.qml  FMeetingViewController.qml  SVCLayout.qml  VideoRenderView.qml
SQMeeting/SQMeetingComponent/FrtcMeetingInterface/FMakeCallClient/: FMakeCallClient.cpp  FMakeCallClient.h
SQMeeting/SQMeetingComponent/FrtcMeetingInterface/MessageHandlerFactory/: MessageHandlerFactory.cpp  MessageHandlerFactory.h
SQMeeting/SQMeetingComponent/FrtcMeetingInterface/MessageHandlerStrategy/: AudioMuteChangedHandler.cpp  AudioMuteChangedHandler.h  CallStateChangedHandler.cpp  CallStateChangedHandler.h  ContentSendingStateChangedHandler.cpp  ContentSendingStateChangedHandler.h  InputPasswordRequestHandler.cpp  InputPasswordRequestHandler.h  LayoutSettingChangedHandler.cpp  LayoutSettingChangedHandler.h  MeetingInfoHandler.cpp  MeetingInfoHandler.h  MessageHandlerStrategy.h  OverlayMessageHandler.cpp  OverlayMessageHandler.h  ParticipantListHandler.cpp  ParticipantListHandler.h  ParticipantsNumChangedHandler.cpp  ParticipantsNumChangedHandler.h  PinSpeakerChangedHandler.cpp  PinSpeakerChangedHandler.h  RemoteAudioStreamReceivedHandler.cpp  RemoteAudioStreamReceivedHandler.h  RemoteVideoStreamReceivedHandler.cpp  RemoteVideoStreamReceivedHandler.h  RequestAudioStreamHandler.cpp  RequestAudioStreamHandler.h  RequestVideoStreamHandler.cpp  RequestVideoStreamHandler.h  SvcLayoutChangedHandler.cpp  SvcLayoutChangedHandler.h  UnMuteAllowedHandler.cpp  UnMuteAllowedHandler.h  UnMuteRequestHandler.cpp  UnMuteRequestHandler.h  WaterMaskHandler.cpp  WaterMaskHandler.h
SQMeeting/SQMeetingComponent/Network/: FrtcApiManager.cpp  FrtcApiManager.h  FrtcNetworkManager.cpp  FrtcNetworkManager.h
SQMeeting/SQMeetingComponent/NotificationCenter/: GlobalObserver.cpp  GlobalObserver.h  ObesrverApater.cpp  ObesrverApater.h
SQMeeting/SQMeetingComponent/SvcLayout/: SDKItemInfo.cpp  SDKItemInfo.h  SVCLayoutManager.cpp  SVCLayoutManager.h  SVCVideoInfo.cpp  SVCVideoInfo.h
SQMeeting/SQMeetingComponent/UIComponent/CommonView/: AlertManager.qml  CustomTitleBar.qml  DialogButton.qml  FrtcAlertView.qml  FrtcButton.qml  FrtcCalendar.qml  FrtcCallInterface.qml  FrtcCheckBoxView.qml  FrtcComboBox.qml  FrtcCustomAlertView.qml  FrtcCustomButton.qml  FrtcDateButton.qml  FrtcLoadingView.qml  FrtcPopupTriangleView.qml  FrtcShareMeetingInfoWindow.qml  FrtcTextField.qml  FrtcTimeListView.qml  FrtcToastView.qml  FrtcTool.qml  MessageBox.qml  PullListView.qml
SQMeeting/SQMeetingComponent/UIComponent/InCallView/FrtcInfoInstance/: FrtcInfoInstance.cpp  FrtcInfoInstance.h
SQMeeting/SQMeetingComponent/UIComponent/InCallView/FrtcMeetingView/: DialogButton.qml  Dialog_customized.qml  FMeetingWindow.qml  FrtcCallBar.qml  FrtcDropCallWindow.qml  FrtcEnableMessageWindow.qml  FrtcInviteToJoinView.qml  FrtcMettingSettingView.qml  FrtcRecordingWindow.qml  FrtcRequestUnMuteDetailCell.qml  FrtcRequetUnMuteTitleCell.qml  FrtcShareStreamingUrlWindow.qml  FrtcStartStreamingWindow.qml  FrtcStopRecordingWindow.qml  FrtcStopStreamingWindow.qml  FrtcTestView.qml  FrtcToastView.qml  (+9 more)
SQMeeting/SQMeetingComponent/UUID/: FrtcUUID.cpp  FrtcUUID.h
SQMeeting/SQMeetingComponent/UserDefault/: FrtcFileManager.cpp  FrtcFileManager.h  SDKUserDefault.cpp  SDKUserDefault.h
SQMeeting/SQMeetingComponent/UtilScreen/: UtilScreen.cpp  UtilScreen.h
SQMeeting/SQMeetingComponent/Utils/: FrtcClipboard.cpp  FrtcClipboard.h  FrtcLogUploader.cpp  FrtcLogUploader.h  FrtcMediainfoManager.cpp  FrtcMediainfoManager.h  LogHelper.h  QMLFileHelper.cpp  QMLFileHelper.h
SQMeeting/SQMeetingComponent/Video/CameraEvent/: CameraEvent.cpp  CameraEvent.h  CameraEventHeader.h
SQMeeting/SQMeetingComponent/Video/VideoCapture/: UnifiedVideoCapture.cpp  UnifiedVideoCapture.h  VideoDataConvertor.cpp  VideoDataConvertor.h
SQMeeting/SQMeetingComponent/Video/VideoRender/: VideoRender.cpp  VideoRender.h
SQMeeting/pkg/: run.sh
frtc_sdk/: CMakeLists.txt
frtc_sdk/frtc_sdk/frtc_sdk_interface/: FrtcCall.cpp  FrtcCall.h  frtc_sdk_api.cpp  frtc_sdk_api.h
frtc_sdk/frtc_sdk/frtc_sdk_rest_api/: frtc_rest_engine.cpp  frtc_rest_engine.h  frtc_user_api.cpp  frtc_user_api.h
frtc_sdk/frtc_sdk/rtc_common_interface/: SDKContextWrapper.cpp  SDKContextWrapper.h  common_interface.cpp  common_interface.h  object_impl.cpp  object_impl.h  version.h
frtc_sdk/frtc_sdk/svc_layout/: SDKItemInfo.cpp  SDKItemInfo.h  SVCLayoutManager.cpp  SVCLayoutManager.h  SVCVideoInfo.cpp  SVCVideoInfo.h
frtc_sdk/frtc_sdk/util/: sq_log.h  sq_util.h  sq_util.mm
(+125 files in other folders)
